<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#888888"
        android:gravity="center"
        android:text="@string/hw"
        android:textSize="24sp"
        tools:textAlignment="center" />

    <EditText
        android:id="@+id/height_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoText="false"
        android:gravity="center"
        android:hint="@string/h_hint"
        android:inputType="number"
        android:padding="15dp"
        android:textSize="20sp"
        tools:autoText="false"
        tools:layout_margin="5dp" />
    <EditText
        android:id="@+id/weight_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/w_hint"
        android:inputType="number"
        android:padding="15dp"
        android:textSize="20sp"
        tools:layout_margin="5dp" />
    <Button
        android:id="@+id/enter_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/enter_btn"
        android:textSize="20sp"
        tools:layout_margin="5dp" />

    <TextView
        android:id="@+id/bmi"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/bmi"
        android:textAlignment="center"
        android:textSize="25sp"
        tools:layout_margin="5dp" />
</LinearLayout>